2010-05-19  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* debug/jtag.c (wishbone_write): Corrected writing when invalid
	address.

2010-05-18  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* debug/jtag.c (go_command_read): Change in calling convention to
	spr_read and wishbone_read.
	(go_command_write): Change in calling convention to spr_write () and
	wishbone_write ().
	(spr_read): Status passed as argument. Correcly handle
	under- and over-run.
	(spr_write): Status passed as argument. Correcly handle	under- and
	over-run.
	(wishbone_read): Correcly handle under- and over-run.
	(wishbone_write): Correcly handle under- and over-run.
	
2010-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* debug/jtag.c (construct_response): Return type changed to void.
	(go_command): Number of bits passed as arg and on to subsidiary
	functions. Return type changed to void. Error message with invalid
	access type removed.
	(go_command_read): Number of bits passed as arg. Return	type changed
	to void. Size validated against prior WRITE_COMMAND. Error message due
	to invalid modules removed. Over/under-run allowed.
	(go_command_write): Number of bits passed as arg. Return type changed
	to void. Size validated against prior WRITE_COMMAND. Error message due
	to invalid modules removed. Over/under-run allowed for.
	(jtag_reset): Return type changed to void.
	(jtag_shift_dr): Number of bits passed as arg and passed to subsidiary
	functions. Return type changed to void.
	(jtag_shift_ir): Number of bits passed as arg and checked. Return type
	changed to void.
	(null_read): No longer takes bit offset as argument, takes actual data
	size as argument. Internal logic simplied and works with
	under/over-run.
	(read_command): Number of bits passed as arg and checked. Return type
	changed to void.
	(read_control): Number of bits passed as arg and checked. Return type
	changed to void. Duplicate error messages eliminated.
	(select_module): Renamed from module_select. Number of bits passed as