@@ -100,14 +100,14 @@ run_libsim "JTAG WRITE_COMMAND module CPU0"                    \
           "  time taken:"                                      \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
-          "  shifting in:  0x00000000018f4396f780000000100088" \
+          "  shifting in:  0x0000000001933eb7e580010028000088" \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
           "Execution step completed OK."                       \
           "Test completed successfully."]                      \
     "lib-jtag/lib-jtag-full" "" "loop/loop" "RESET" "INSTRUCTION" "8" \
-         "SELECT_MODULE" "1" "WRITE_COMMAND" "2" "100000" "4"
+         "SELECT_MODULE" "1" "WRITE_COMMAND" "2" "2801" "4"
 
 # WRITE_COMMAND for CPU1
 run_libsim "JTAG WRITE_COMMAND module CPU1"                    \
@@ -1243,7 +1243,7 @@ run_libsim "JTAG WRITE_COMMAND WB read words, byte 3 aligned"          \
 
 # WRITE_COMMAND to write bytes for CPU0 (access type 0). This should fail
 # with an error message.
-run_libsim "JTAG WRITE_COMMAND CPU0 write bytes"           \
+run_libsim "JTAG WRITE_COMMAND CPU0 write bytes"               \
     [list "Initalization succeeded."                           \
           "Execution step completed OK."                       \
           "Resetting JTAG."                                    \
@@ -1261,6 +1261,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 write bytes"           \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x00000000011b285d1780010028000008" \
+          "ERROR: JTAG 8-bit access for SPR not supported."    \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
@@ -1289,6 +1290,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 write half words"      \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x00000000000b0588f380010028000108" \
+          "ERROR: JTAG 16-bit access for SPR not supported."   \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
@@ -1326,7 +1328,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 write words"           \
 
 # WRITE_COMMAND to write access type 3. This should fail with an error
 # message.
-run_libsim "JTAG WRITE_COMMAND CPU0 write access type 3"   \
+run_libsim "JTAG WRITE_COMMAND CPU0 access type 3"       \
     [list "Initalization succeeded."                           \
           "Execution step completed OK."                       \
           "Resetting JTAG."                                    \
@@ -1344,6 +1346,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 write access type 3"   \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x00000000008313620180010028000188" \
+          "ERROR: unknown JTAG SPR access type 3."             \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
@@ -1354,7 +1357,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 write access type 3"   \
 
 # WRITE_COMMAND to read bytes for CPU0 (access type 4). This should fail
 # with an error message.
-run_libsim "JTAG WRITE_COMMAND CPU0 read bytes"       \
+run_libsim "JTAG WRITE_COMMAND CPU0 read bytes"                \
     [list "Initalization succeeded."                           \
           "Execution step completed OK."                       \
           "Resetting JTAG."                                    \
@@ -1372,6 +1375,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 read bytes"       \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x000000000084522e2f80010028000048" \
+          "ERROR: JTAG 8-bit access for SPR not supported."    \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
@@ -1382,7 +1386,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 read bytes"       \
 
 # WRITE_COMMAND to read half words for CPU0 (access type 5). This should fail
 # with an error message.
-run_libsim "JTAG WRITE_COMMAND CPU0 read half words"       \
+run_libsim "JTAG WRITE_COMMAND CPU0 read half words"           \
     [list "Initalization succeeded."                           \
           "Execution step completed OK."                       \
           "Resetting JTAG."                                    \
@@ -1400,6 +1404,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 read half words"       \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x0000000001947ffbcb80010028000148" \
+          "ERROR: JTAG 16-bit access for SPR not supported."   \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
@@ -1436,7 +1441,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 read words"            \
          "8" "SELECT_MODULE" "1" "WRITE_COMMAND" "6" "2801" "4"
 
 # WRITE_COMMAND to read access type 7. This should fail with an error message.
-run_libsim "JTAG WRITE_COMMAND CPU0 read access type 7"    \
+run_libsim "JTAG WRITE_COMMAND CPU0 access type 7"             \
     [list "Initalization succeeded."                           \
           "Execution step completed OK."                       \
           "Resetting JTAG."                                    \
@@ -1454,6 +1459,7 @@ run_libsim "JTAG WRITE_COMMAND CPU0 read access type 7"    \
           "Execution step completed OK."                       \
           "Processing WRITE_COMMAND."                          \
           "  shifting in:  0x00000000011c691139800100280001c8" \
+          "ERROR: unknown JTAG SPR access type 7."             \
           "  shifted out:  0x164841bc600000000000000000000000" \
           "  status:       0x0"                                \
           "  time taken:"                                      \
